Added navigation between activities

--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -13,7 +13,7 @@
             android:name=".EvaluationsActivity"
             android:exported="true" />
         <activity
-            android:name=".AddEvaluation"
+            android:name=".AddEvaluationActivity"
             android:exported="true" />
         <activity
             android:name=".LoginActivity"
